# moomacha

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  index.html
control-plane/: .dockerignore  .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.box.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
control-plane/alembic/: env.py
control-plane/scripts/: box-redeploy.sh  clone_local_db.py  dump_seed.py  e2e_db_tools_live.py  e2e_memory_probe.py  e2e_memory_tools_live.py  export_agent_memory.py  grant_bastion_exec.py  grant_google_tools.py  grant_image_tools.py  grant_interactive_response.py  grant_schedule_tools.py  import_agent_memory.py  live_dm_playwright.js  load_seed.py  login_playwright.py  migrate_context_substrate.py  relay_e2e.md  run_live_dm_playwright.py  seed_codex_test_agent.py  seed_pool_and_archetypes.py  set_bastion_runtime.py  sync_persona.py  verify_codex_tools_live.py  verify_schedule_live.py
control-plane/tests/: conftest.py  test_agent_memory_namespaces.py  test_agent_memory_tools.py  test_agent_registry.py  test_agent_type_catalog.py  test_agents_route.py  test_app_scheduler_wiring.py  test_app_wiring.py  test_archetype_catalog.py  test_archetype_catalog_upsert.py  test_archetype_schema.py  test_artifact_html.py  test_artifact_store.py  test_artifact_summary.py  test_artifact_tables.py  test_artifacts_app_wiring.py  test_artifacts_route.py  test_audit_sink.py  test_bastion_management_e2e.py  test_bastion_seeder.py  test_browser_goal_runner.py  test_cattle_app_wiring.py  test_cattle_artifact_binding.py  test_cattle_tables.py  test_claw_briefings.py  test_claw_persona.py  test_codex_backend.py  test_codex_config_setting.py  test_codex_health.py  test_codex_runner.py  test_codex_tool_bridge.py  test_codex_workspace.py  test_config.py  test_context7_tools.py  test_context_assembly.py  test_crypto.py  test_dashboard_route.py  test_db_engine.py  test_dedupe.py  test_deepagents_backend.py  (+73 more)
exec-mcp/: pyproject.toml
exec-mcp/tests/: test_runner.py
(+149 files in other folders)
