[project]
name = "control-plane"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "cryptography>=42.0",
    "strands-agents[openai]>=1.0",
    "croniter>=6.2.2",
    "mcp>=1.12",
    "deepagents>=0.6",
    "langchain>=1",
    "langgraph>=1",
    "langchain-openai>=1",
    "alembic>=1.18.4",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that exercise the assembled control-plane path",
    "live_e2e: opt-in tests against live external services; skipped unless explicitly enabled",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_plane"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E402: several tests/scripts set env vars before importing the app — intentional.
ignore = ["E402", "E731", "E741"]
