[project]
name = "exec-mcp"
version = "0.1.0"
description = "Isolated local MCP (SSE) service exposing a scoped run_command tool."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exec_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
